@@ -4,6 +4,7 @@
    artists, or albums.
 2. When browsing Genres -> Jazz, allow user to list composers, artists, or
    albums.
+3. Add jumplist support to playlists listing.
 
 0.5.3
 -----
